// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden plans > cold_start is unchanged 1`] = `
{
  "blocked_regions": [],
  "signature": "2dc30f15",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "warmup",
        "minutes": 5,
        "title": "Warm-up",
      },
      {
        "cardio": {
          "bpm": [
            164,
            177,
          ],
          "minutes": 30,
          "modality": "run",
          "structure": "intervals",
        },
        "exercises": [],
        "kind": "conditioning",
        "minutes": 30,
        "title": "8 × 2 min",
      },
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "cooldown",
        "minutes": 5,
        "title": "Cool-down",
      },
    ],
    "date": "2026-09-22",
    "deload": false,
    "estimated_min": 40,
    "readiness": {
      "band": "as_planned",
      "score": 75,
      "source": "default",
    },
    "title": "VO2 intervals",
    "type": "vo2",
    "why": "VO2 day. Readiness 75 — run it as written. The single highest-leverage session for lifespan.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 40,
      "type": "vo2",
    },
    {
      "date": "2026-09-23",
      "minutes": 33.4,
      "type": "strength",
    },
    {
      "date": "2026-09-24",
      "minutes": 40,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 26.9,
      "type": "power",
    },
    {
      "date": "2026-09-26",
      "minutes": 40,
      "type": "mobility",
    },
    {
      "date": "2026-09-27",
      "minutes": 26.9,
      "type": "power",
    },
    {
      "date": "2026-09-28",
      "minutes": 29.9,
      "type": "strength",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 0,
    "steps_avg": undefined,
    "strength_min": 0,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 0,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 60,
    "zone2_min": 0,
    "zone2_target_min": 180,
  },
}
`;

exports[`golden plans > fifteen_min_home is unchanged 1`] = `
{
  "blocked_regions": [],
  "signature": "e134acc2",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "warmup",
        "minutes": 3,
        "title": "Warm-up",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "backward-walk",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "tibialis-raise",
            "load_lb": 0,
            "reps": 25,
            "rpe": 8,
            "sets": 3,
          },
        ],
        "kind": "program",
        "minutes": 11.38,
        "title": "Knees Over Toes — ground up",
      },
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "cooldown",
        "minutes": 2,
        "title": "Cool-down",
      },
    ],
    "date": "2026-09-22",
    "deload": false,
    "estimated_min": 16.4,
    "readiness": {
      "band": "as_planned",
      "score": 78.7,
      "source": "blend",
    },
    "title": "Knees Over Toes",
    "type": "kot",
    "why": "Knees Over Toes. Readiness 79 — run it as written. 0/3 KOT sessions done this week.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 16.4,
      "type": "kot",
    },
    {
      "date": "2026-09-23",
      "minutes": 15,
      "type": "zone2",
    },
    {
      "date": "2026-09-24",
      "minutes": 15,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 14.5,
      "type": "strength",
    },
    {
      "date": "2026-09-26",
      "minutes": 16.4,
      "type": "kot",
    },
    {
      "date": "2026-09-27",
      "minutes": 15,
      "type": "zone2",
    },
    {
      "date": "2026-09-28",
      "minutes": 14,
      "type": "mobility",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 1,
    "steps_avg": 7500,
    "strength_min": 40,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 10950,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 55,
    "zone2_min": 25,
    "zone2_target_min": 180,
  },
}
`;

exports[`golden plans > high_readiness is unchanged 1`] = `
{
  "blocked_regions": [],
  "signature": "0299adf0",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "warmup",
        "minutes": 5,
        "title": "Warm-up",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "backward-walk",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "tibialis-raise",
            "load_lb": 0,
            "reps": 25,
            "rpe": 8,
            "sets": 3,
          },
          {
            "id": "patrick-step",
            "load_lb": 0,
            "reps": 10,
            "rpe": 8,
            "sets": 3,
          },
          {
            "id": "atg-split-squat",
            "load_lb": 75,
            "reps": 5,
            "rpe": 8,
            "sets": 3,
          },
          {
            "id": "deep-squat-hold",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "program",
        "minutes": 28.01,
        "title": "Knees Over Toes — ground up",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "nordic-curl",
            "load_lb": 0,
            "reps": 10,
            "rpe": 8,
            "sets": 3,
          },
        ],
        "kind": "strength",
        "minutes": 4.75,
        "title": "Upper body — pairs with the knee work",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "bird-dog",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "mcgill-curl-up",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "strength",
        "minutes": 3,
        "title": "Core",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "side-plank",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 1.5,
        "title": "McGill Big 3",
      },
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "cooldown",
        "minutes": 5,
        "title": "Cool-down",
      },
    ],
    "date": "2026-09-22",
    "deload": false,
    "estimated_min": 47.3,
    "readiness": {
      "band": "push",
      "score": 94.4,
      "source": "blend",
    },
    "title": "Knees Over Toes",
    "type": "kot",
    "why": "Knees Over Toes. Readiness 94 — green light, take the extra set. 0/3 KOT sessions done this week.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 47.3,
      "type": "kot",
    },
    {
      "date": "2026-09-23",
      "minutes": 45.5,
      "type": "vo2",
    },
    {
      "date": "2026-09-24",
      "minutes": 55,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 47,
      "type": "mobility",
    },
    {
      "date": "2026-09-26",
      "minutes": 55,
      "type": "strength",
    },
    {
      "date": "2026-09-27",
      "minutes": 47,
      "type": "mobility",
    },
    {
      "date": "2026-09-28",
      "minutes": 55,
      "type": "strength",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 1,
    "steps_avg": 7500,
    "strength_min": 40,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 10950,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 55,
    "zone2_min": 25,
    "zone2_target_min": 180,
  },
}
`;

exports[`golden plans > injury_flare is unchanged 1`] = `
{
  "blocked_regions": [],
  "signature": "b77b083c",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "warmup",
        "minutes": 5,
        "title": "Warm-up",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "backward-walk",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "tibialis-raise",
            "load_lb": 0,
            "reps": 25,
            "rpe": 8,
            "sets": 3,
          },
          {
            "id": "patrick-step",
            "load_lb": 0,
            "reps": 10,
            "rpe": 8,
            "sets": 3,
          },
          {
            "id": "atg-split-squat",
            "load_lb": 75,
            "reps": 5,
            "rpe": 8,
            "sets": 3,
          },
          {
            "id": "deep-squat-hold",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "program",
        "minutes": 28.01,
        "title": "Knees Over Toes — ground up",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "nordic-curl",
            "load_lb": 0,
            "reps": 10,
            "rpe": 8,
            "sets": 3,
          },
        ],
        "kind": "strength",
        "minutes": 4.75,
        "title": "Upper body — pairs with the knee work",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "bird-dog",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "mcgill-curl-up",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "strength",
        "minutes": 3,
        "title": "Core",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "side-plank",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 1.5,
        "title": "McGill Big 3",
      },
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "cooldown",
        "minutes": 5,
        "title": "Cool-down",
      },
    ],
    "date": "2026-09-22",
    "deload": false,
    "estimated_min": 47.3,
    "readiness": {
      "band": "as_planned",
      "score": 77.9,
      "source": "blend",
    },
    "title": "Knees Over Toes",
    "type": "kot",
    "why": "Knees Over Toes. Readiness 78 — run it as written. 0/3 KOT sessions done this week.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 47.3,
      "type": "kot",
    },
    {
      "date": "2026-09-23",
      "minutes": 45.5,
      "type": "vo2",
    },
    {
      "date": "2026-09-24",
      "minutes": 55,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 47,
      "type": "mobility",
    },
    {
      "date": "2026-09-26",
      "minutes": 55,
      "type": "strength",
    },
    {
      "date": "2026-09-27",
      "minutes": 47,
      "type": "mobility",
    },
    {
      "date": "2026-09-28",
      "minutes": 55,
      "type": "strength",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 1,
    "steps_avg": 7500,
    "strength_min": 40,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 10950,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 55,
    "zone2_min": 25,
    "zone2_target_min": 180,
  },
}
`;

exports[`golden plans > low_readiness is unchanged 1`] = `
{
  "blocked_regions": [],
  "signature": "e5d2595c",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "mcgill-curl-up",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "side-plank",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "bird-dog",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 4.5,
        "title": "McGill Big 3",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "couch-stretch",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "deep-squat-hold",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "elephant-walk",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "thoracic-opener",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 7.5,
        "title": "Recovery",
      },
      {
        "cardio": {
          "bpm": [
            93,
            112,
          ],
          "minutes": 30,
          "modality": "walk",
          "structure": "steady",
        },
        "exercises": [],
        "kind": "zone2",
        "minutes": 30,
        "title": "Easy walk",
      },
    ],
    "date": "2026-09-22",
    "deload": true,
    "estimated_min": 42,
    "readiness": {
      "band": "recovery",
      "score": 44.8,
      "source": "blend",
    },
    "title": "Recovery",
    "type": "recovery",
    "why": "Recovery day. Deload week — 7-day readiness averaging 62 — below 65.. Readiness 45 — today is mobility, an easy walk, and breathing.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 42,
      "type": "recovery",
    },
    {
      "date": "2026-09-23",
      "minutes": 41.8,
      "type": "kot",
    },
    {
      "date": "2026-09-24",
      "minutes": 55,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 41.8,
      "type": "kot",
    },
    {
      "date": "2026-09-26",
      "minutes": 45.5,
      "type": "vo2",
    },
    {
      "date": "2026-09-27",
      "minutes": 55,
      "type": "strength",
    },
    {
      "date": "2026-09-28",
      "minutes": 47,
      "type": "mobility",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 1,
    "steps_avg": 7500,
    "strength_min": 40,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 10950,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 55,
    "zone2_min": 25,
    "zone2_target_min": 180,
  },
}
`;

exports[`golden plans > ninety_min_pf is unchanged 1`] = `
{
  "blocked_regions": [],
  "signature": "9bedcbf6",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "warmup",
        "minutes": 5,
        "title": "Warm-up",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "backward-walk",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "tibialis-raise",
            "load_lb": 0,
            "reps": 25,
            "rpe": 9,
            "sets": 3,
          },
          {
            "id": "patrick-step",
            "load_lb": 0,
            "reps": 10,
            "rpe": 9,
            "sets": 3,
          },
          {
            "id": "atg-split-squat",
            "load_lb": 80,
            "reps": 5,
            "rpe": 9,
            "sets": 3,
          },
          {
            "id": "deep-squat-hold",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "program",
        "minutes": 36.01,
        "title": "Knees Over Toes — ground up",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "leg-press",
            "load_lb": 20,
            "reps": 6,
            "rpe": 8,
            "sets": 3,
          },
          {
            "id": "nordic-curl",
            "load_lb": 0,
            "reps": 6,
            "rpe": 8,
            "sets": 3,
          },
          {
            "id": "assisted-pull-up",
            "load_lb": 0,
            "reps": 6,
            "rpe": 8,
            "sets": 3,
          },
        ],
        "kind": "strength",
        "minutes": 18.15,
        "title": "Upper body — pairs with the knee work",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "mcgill-curl-up",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "side-plank",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
          {
            "id": "bird-dog",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 4.5,
        "title": "McGill Big 3",
      },
      {
        "cardio": undefined,
        "exercises": [
          {
            "id": "couch-stretch",
            "load_lb": 0,
            "reps": 0,
            "rpe": undefined,
            "sets": 1,
          },
        ],
        "kind": "mobility",
        "minutes": 1.5,
        "title": "Mobility",
      },
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "cooldown",
        "minutes": 5,
        "title": "Cool-down",
      },
    ],
    "date": "2026-09-22",
    "deload": false,
    "estimated_min": 70.2,
    "readiness": {
      "band": "as_planned",
      "score": 82.9,
      "source": "blend",
    },
    "title": "Knees Over Toes",
    "type": "kot",
    "why": "Knees Over Toes. Readiness 83 — run it as written. 0/3 KOT sessions done this week.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 70.2,
      "type": "kot",
    },
    {
      "date": "2026-09-23",
      "minutes": 45.5,
      "type": "vo2",
    },
    {
      "date": "2026-09-24",
      "minutes": 72.5,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 44.1,
      "type": "strength",
    },
    {
      "date": "2026-09-26",
      "minutes": 22,
      "type": "mobility",
    },
    {
      "date": "2026-09-27",
      "minutes": 44.1,
      "type": "strength",
    },
    {
      "date": "2026-09-28",
      "minutes": 22,
      "type": "mobility",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 1,
    "steps_avg": 7500,
    "strength_min": 40,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 10950,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 55,
    "zone2_min": 25,
    "zone2_target_min": 180,
  },
}
`;

exports[`the worked example in docs/ENGINE.md > is unchanged 1`] = `
{
  "blocked_regions": [
    "hips_glutes",
    "knees_quads",
    "low_back",
    "posterior_chain",
  ],
  "signature": "934e06f6",
  "today": {
    "blocks": [
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "warmup",
        "minutes": 5,
        "title": "Warm-up",
      },
      {
        "cardio": {
          "bpm": [
            164,
            177,
          ],
          "minutes": 30,
          "modality": "run",
          "structure": "intervals",
        },
        "exercises": [],
        "kind": "conditioning",
        "minutes": 30,
        "title": "8 × 2 min",
      },
      {
        "cardio": undefined,
        "exercises": [],
        "kind": "cooldown",
        "minutes": 5,
        "title": "Cool-down",
      },
    ],
    "date": "2026-09-22",
    "deload": false,
    "estimated_min": 40,
    "readiness": {
      "band": "as_planned",
      "score": 72,
      "source": "oura",
    },
    "title": "VO2 intervals",
    "type": "vo2",
    "why": "VO2 day. Readiness 72 — run it as written. The single highest-leverage session for lifespan.",
  },
  "warnings": [],
  "week": [
    {
      "date": "2026-09-22",
      "minutes": 40,
      "type": "vo2",
    },
    {
      "date": "2026-09-23",
      "minutes": 28.4,
      "type": "power",
    },
    {
      "date": "2026-09-24",
      "minutes": 40,
      "type": "zone2",
    },
    {
      "date": "2026-09-25",
      "minutes": 35,
      "type": "kot",
    },
    {
      "date": "2026-09-26",
      "minutes": 40,
      "type": "mobility",
    },
    {
      "date": "2026-09-27",
      "minutes": 40,
      "type": "zone2",
    },
    {
      "date": "2026-09-28",
      "minutes": 29.9,
      "type": "strength",
    },
  ],
  "weekly": {
    "mobility_sessions": 0,
    "plyo_contacts": 0,
    "sessions": 2,
    "steps_avg": 7500,
    "strength_min": 85,
    "strength_target_min": [
      60,
      120,
    ],
    "tonnage_lb": 14560,
    "vo2_sessions": 0,
    "zone2_ceiling_min": 55,
    "zone2_min": 47,
    "zone2_target_min": 180,
  },
}
`;
